ready to deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://osamajavaid.github.io/etracker",
+  "homepage": "http://osamajavaid.github.io/",
   "name": "etracker",
   "version": "0.1.0",
   "private": true,
